@@ -1,3 +1,8 @@
+2010-04-20  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
+	stock icon support.
+
 2010-03-04  Akira TAGOH  <tagoh@redhat.com>
 
 	* configure.ac: move ALL_LINGUAS into po/LINGUAS file.
